--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.19.2",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.13",
     "i18next": "^23.12.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^14.1.2",
